# aiohttp-aiofiles-tutorial

./: .gitignore  LICENSE  Makefile  README.md  config.py  log.py  logger.py  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  isort.yml  pylint.yml  python-app.yml
aiohttp_aiofiles_tutorial/: __init__.py  fetcher.py  loops.py  parser.py  tasks.py  writer.py
aiohttp_aiofiles_tutorial/data/: __init__.py  parser.py  urls.csv  urls.py
aiohttp_aiofiles_tutorial/data/tests/: test_parser.py
aiohttp_aiofiles_tutorial/tests/: test_parser.py
aiohttp_aiofiles_tutorial/tests/resources/: intro_to_asyncio.html
asyncio_tutorial/: __init__.py  data.py  fetcher.py  logger.py  loop.py  reader.py  tasks.py  urls.csv  writer.py
asyncio_tutorial/part_II_aiohttp_aiofiles/: __init__.py  fetcher.py  futures.py  loops.py  tasks.py  writer.py
asyncio_tutorial/part_I_asyncio_intro/: __init__.py  coroutines.py  futures.py  loops.py  tasks.py
data/: __init__.py  parser.py
data/tests/: test_parser.py
