[tool.poetry]
name = "asyncio_tutorial"
version = "0.1.0"
description = "Execute tasks asynchronously in Python using Asyncio."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hackersandslackers/asyncio-tutorial/"
repository = "https://github.com/hackersandslackers/asyncio-tutorial/"
documentation = "https://hackersandslackers.com/async-requests-with-aiohttp/"
keywords = [
  "Asyncio",
  "Aiohttp",
  "Aiofiles",
  "Asynchronous",
  "I/O"
]

[tool.poetry.dependencies]
python ="^3.9"
aiohttp = "*"
asyncio = "*"
aiofiles = "*"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
brotlipy = "^0.7.0"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
black = "^21.9b0"
isort = "5.9.3"
flake8 = "^3.9.2"

[tool.poetry.scripts]
run = "main:init_script"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/asyncio-tutorial/issues"

[build-system]
requires = ["poetry>=1.18"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["asyncio_tutorial", "data", "main", "config"]
