[tool.poetry]
name = "Async HTTP Requests with Aiohttp & Aiofiles"
version = "0.1.0"
description = "Handle mass HTTP requests, disk writes, and other I/O-bound tasks with Python's quintessential async libraries."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hackersandslackers/aiohttp-aiofiles-tutorial/"
repository = "https://github.com/hackersandslackers/aiohttp-aiofiles-tutorial/"
documentation = "https://hackersandslackers.com/async-requests-aiohttp-aiofiles/"
keywords = [
  "Asyncio",
  "Aiohttp",
  "Aiofiles",
  "Asynchronous",
  "I/O"
]

[tool.poetry.dependencies]
python ="^3.9"
aiohttp = "*"
asyncio = "*"
aiofiles = "*"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
brotlipy = "^0.7.0"
bs4 = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "*"
mypy = "*"
black = "^21.12b0"
isort = "5.12.0"
flake8 = "^4.0.1"
pylint = "*"

[tool.poetry.scripts]
run = "main:init_script"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/aiohttp-aiofiles-tutorial/issues"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["aiohttp_aiofiles_tutorial"]

[tool.black]
line-length = 80

[tool.pylint.'MESSAGES CONTROL']
disable="C0103,C0301,W0703,W0621"
